   Backport R lexer from Scintilla CVS to fix case sensitive keywords
   (Scintilla bug #2956543).
 * src/sidebar.c, src/about.c, THANKS:
   Make Space on the symbol and document list not focus the editor
   widget while Enter does (closes #2919444, patch by Can Koy, thanks).
 * src/document.c, src/document.h:
   Fix document_try_focus() to make it work with the sidebar document
   list as well.


2010-02-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/ui_utils.c:
   Show number of lines of current document inside statusbar. Thanks to
   Can Koy for providing the patch.


2010-02-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, doc/geany.txt, doc/geany.html:
   Make Switch to Editor keybinding reshow the document statistics
   line, so user doesn't have to move the cursor.


2010-02-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.r:
   Update keywords for the R language (patch by Jon Senior, thanks).


2010-02-21  Dominic Hopf  <dmaphy(at)googlemail(dot)com>

 * doc/geany.txt:
   Fix the instruction how to insert unicode characters
   (thanks Tony Rick).


2010-02-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scripts/create_py_tags.py:
   Minor fixes.
   Replace tabs by spaces.
 * plugins/genapi.py:
   Minor fixes.
   Replace tabs by spaces.
 * tagmanager/r.c, plugins/geanyfunctions.h, src/about.c,
   src/filetypes.c, src/symbols.c, tagmanager/Makefile.am,
   tagmanager/makefile.win32, tagmanager/parsers.h, wscript, THANKS:
   Add R tagmanager symbol parser (patch by Jon Senior, thanks).
 * doc/geany.html, doc/geany.txt, src/keybindings.c, src/keybindings.h,
   src/plugindata.h, src/sidebar.c, src/sidebar.h:
   Add keybindings to switch to the sidebar's Document and Symbol list
   as well as to the Message Window's current tab
   (patch by Eugene Arshinov, thanks).
 * data/filetypes.r:
   Update primary keywords for the R language
   (patch by Jon Senior, thanks).

