@@ -101,11 +101,11 @@ void msgwin_show_hide_tabs(void);
 
 void msgwin_menu_add_common_items(GtkMenu *menu);
 
-gboolean msgwin_goto_compiler_file_line(void);
+gboolean msgwin_goto_compiler_file_line(guint keyval);
 
 void msgwin_parse_compiler_error_line(const gchar *string, const gchar *dir,
 									  gchar **filename, gint *line);
 
-gboolean msgwin_goto_messages_file_line(void);
+gboolean msgwin_goto_messages_file_line(guint keyval);
 
 #endif
