@@ -1492,7 +1492,7 @@ static gboolean tree_view_find(GtkTreeView *treeview, TVMatchCallback cb, gboole
 	while (TRUE)
 	{
 		gtk_tree_selection_select_iter(treesel, &iter);
-		if (cb())
+		if (cb(0))
 			break;	/* found next message */
 
 		if (! tree_model_iter_get_next(model, &iter, down))
